Update and rename TEXT.html to index1.html

--- a/index1.html
+++ b/index1.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 
 <p class="Tit">
-    Talking Tech nd AI with Google CEO Sundar Pichai!
+    Hello there Guys!
 </p>
 
 <p class="Vie">
 
-    3.4M Views &#183; 6 months ago
+    Just now Updated!
 </p>
 
 <p class="nam">
-    Marques Brownlee &#10003;
+    Justify &#10003;
 </p>
 
 <p class="spe">
-    Talking tech and AI on the heels of Google I/O. Also a daily driver phone reveal from Google's CEO . Shoutout to Sundar! 
+    I'm a New Developer But still not a kid in Data structure. 
 </p>
 
 <p class="P2">
-    Shop early for the best selection of holidays favourites.<span class="spa">Shop Now</span>
+    Dev By ROAR<span class="spa">Share</span>
 </p>
 
 
